# MR-Project-Team_Bars

./: .gitignore  CMakeLists.txt  transLog.txt  visualize.m
examples/: ceresOptimizer.cpp  ceres_simple.cpp  create_ceres.cpp  multiViewAdjuster.cc  multiViewAdjuster.cpp  multiViewShapeAdjuster.cpp  readCeresInput.cpp  read_ceres.cpp  singleViewPoseAdjuster.cc  singleViewPoseAdjuster.cpp  singleViewShapeAdjuster.cc  singleViewShapeAdjuster.cpp
files/: ceres_input_singleViewPoseAdjuster.txt  ceres_input_singleViewShapeAdjuster.txt  ceres_output_multiViewAdjuster.txt  ceres_output_singleViewPoseAdjuster.txt  ceres_output_singleViewShapeAdjuster.txt  compare.py  lvals.txt  rotLog.txt  transLog.txt  vvals.txt
include/: ceresOptimizer.h  costFunctions.hpp  multiViewAdjuster.h  multiViewShapeAdjuster.h  multiViewShapeAdjusterVector.h  readCeresInput.h  singleViewPoseAdjuster.h  singleViewShapeAdjuster.h
